Removed new Integer() calls from the platform cluster